--- a/match.html
+++ b/match.html
@@ -7,9 +7,8 @@
 			<p> Age: {{user.age}} </p>
 			<img src="{{user.picture}}" />
 			<p> Tagline: {{user.tagline}} </p>
-
 			<p> Boss in: {{user.tags}} </p>
-			<p> Interests: </p>
+			<p> Interests: {{user.interests}} </p>
 			<submit> Connect! </submit>
 		{% endfor %}
 	</form>
