--- a/base.html
+++ b/base.html
@@ -4,8 +4,10 @@
     <meta charset="utf-8">
     <title>Spark</title>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+    <link rel='stylesheet' href='jquery.swipeshow.css'>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src='jquery.swipeshow.js'></script>
     <script src="js/bootstrap.min.js"></script>
 </head>
 <header>
