--- a/profile.html
+++ b/profile.html
@@ -1,12 +1,12 @@
 {% extends "base.html" %}
 {% block body %}
 <form>
-	<h2> Alice {{user.first}} </h2>
+	<h2> {{user.first}} </h2>
 	<img src="{{user.picture}}" />
 	Age: <input type="text" name="age" value="{{user.age}}"> </br>
 	Tagline: <input type="text" name="age" value="{{user.tagline}}"> </br>
 	Boss in: <input type="text" name="age" value="{{user.tags}}"> </br>
 	Interests: <input type="text" name="age" value="{{user.interests}}"> </br>
-	<submit> Update My Profile! </submit>
+	<input type="submit" value="Update My Profile!" >
 </form>
 {% endblock %}
