--- a/base.html
+++ b/base.html
@@ -4,11 +4,8 @@
     <meta charset="utf-8">
     <title>Spark</title>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-    <link rel='stylesheet' href='jquery.swipeshow.css'>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script src='jquery.swipeshow.js'></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     <style>
         nav ul {
             list-style-type: none;
@@ -26,8 +23,8 @@
 <nav>
     <ul>
         <li><a href="/">Home</a></li>
-        <li><a href="/profile">My Profile</a></li>
         <li><a href="/match">Find Mentors</a></li>
+        <li><a href="/profile">My Profile</a></li>
     </ul>
 </nav>
 <body>
