--- a/match.html
+++ b/match.html
@@ -1,21 +1,34 @@
 {% extends "base.html" %}
 {% block body %}
-	<h1> Matches </h1>	
-	<div class="matches">
-		{% for user in users %}
-		<li class="slide">
-			<h2> {{user.first}} </h2>
-			Age: {{user.age}} </br>
-			<img src="{{user.picture}}" />
-			Tagline: {{user.tagline}} </br>
-			Boss in: {{user.tags}} </br>
-			Interests: {{user.interests}} </br>
-			<form>
-				<input type="submit" value="Connect!" >
-			</form>
-		</li>
-		{% endfor %}
+	<div class="my-gallery swipeshow">
+		<ul class="slides">
+			{% for user in users %}
+			<li class="slide">
+				<img src="{{user.picture}}" /> <br>
+				<h2> {{user.first}} </h2>
+				Age: {{user.age}} <br>
+				Tagline: {{user.tagline}} <br>
+				Boss in: {{user.tags}} <br>
+				Interests: {{user.interests}} <br>
+				<form action="/hangout?users=" + {{current_user.email}} + "&" + {{user.email}}>
+					<input type="submit" value="Connect!" >
+				</form>
+			</li>
+			{% endfor %}
+		</ul>
 	</div>
+<link rel='stylesheet' href='/static/jquery.swipeshow.css'>
+<script src='/static/jquery.swipeshow.js'></script>
+<style>
+	.my-gallery {
+	  width: 100%;
+	  height: 500px; 
+	  text-align: center;
+	}
+</style>
 <script>
+	$(function() {
+	  $(".my-gallery").swipeshow();
+	});
 </script>
 {% endblock %}
