--- a/base.html
+++ b/base.html
@@ -15,6 +15,9 @@
         nav li {
             display: inline;
         }
+        .form-wrapper {
+            text-align: center;
+        }
     </style>
 </head>
 <header>
