--- a/match.html
+++ b/match.html
@@ -7,7 +7,10 @@
 				<img src="{{user.picture}}" /> <br>
 				<h2> {{user.first}} </h2>
 				Age: {{user.age}} <br>
-				Tagline: {{user.tagline}} <br>
+				Tagline: 
+					{% for t in user.tags %}
+						<a href=""> {{t}} </a>
+					{% endfor %} <br>
 				Boss in: {{user.tags}} <br>
 				Interests: {{user.interests}} <br>
 				<form action="/hangout?users=" + {{current_user.email}} + "&" + {{user.email}}>
@@ -25,10 +28,18 @@
 	  height: 500px; 
 	  text-align: center;
 	}
+	img {
+		width: 10%;
+		border: 2px solid;
+    	border-radius: 25px;
+	}
 </style>
 <script>
 	$(function() {
-	  $(".my-gallery").swipeshow();
+	  $(".my-gallery").swipeshow({
+	  	autostart: false,
+	  	keys: true,
+	  });
 	});
 </script>
 {% endblock %}
