--- a/base.html
+++ b/base.html
@@ -14,9 +14,13 @@
         }
         nav li {
             display: inline;
+            margin: 10px;
         }
         .form-wrapper {
             text-align: center;
+        }
+        body {
+            background-color: rgba(168,168,168, 0.2);
         }
     </style>
 </head>
