--- a/match.html
+++ b/match.html
@@ -1,10 +1,14 @@
 {% extends "base.html" %}
 {% block body %}
+<div class="form-wrapper">
 	<div class="my-gallery swipeshow">
 		<ul class="slides">
 			{% for user in users %}
 			<li class="slide">
-				<img src="{{user.picture}}" /> <br>
+				<div class="img-wrapper">
+					<img src="{{user.picture}}" />
+				</div>
+				<div class="info">
 				<h2> {{user.first}} </h2>
 				Age: {{user.age}} <br>
 				Tagline: 
@@ -13,31 +17,44 @@
 					{% endfor %} <br>
 				Boss in: {{user.tags}} <br>
 				Interests: {{user.interests}} <br>	
+			
 
-<script src="https://apis.google.com/js/platform.js"></script>
-<div id="placeholder-div1"></div>
-
-<script type="text/javascript" src="https://apis.google.com/js/platform.js"></script>
-    <g:hangout render="createhangout"
-        invites="[{ id : '{{user.email}}', invite_type : 'EMAIL' }]">
-    </g:hangout>
-
+			<script src="https://apis.google.com/js/platform.js"></script>
+			<div id="placeholder-div1"></div>
+			<script type="text/javascript" src="https://apis.google.com/js/platform.js"></script>
+			    <g:hangout render="createhangout"
+			        invites="[{ id : '{{user.email}}', invite_type : 'EMAIL' }]">
+			    </g:hangout>
+			</div>
 			</li>
 			{% endfor %}
 		</ul>
 	</div>
+</div>
 <link rel='stylesheet' href='/static/jquery.swipeshow.css'>
 <script src='/static/jquery.swipeshow.js'></script>
 <style>
+	.form-wrapper {
+		text-align: center;
+		padding: 5%;
+	}
 	.my-gallery {
 	  width: 100%;
 	  height: 500px; 
-	  text-align: center;
+	}
+	.info {
+		height: 100%;
+		padding: 5%;
+	}
+	.img-wrapper {
+		width: 30%;
+		float: left;
 	}
 	img {
-		width: 10%;
 		border: 2px solid;
     	border-radius: 25px;
+    	max-width: 100%;
+    	max-height: 100%;
 	}
 </style>
 <script>
