--- a/profile.html
+++ b/profile.html
@@ -5,9 +5,9 @@
 		<img src="{{user.picture}}" />
 		<h2> {{user.first}} </h2>
 		Age: <input type="text" name="age" value="{{user.age}}"> <br>
-		Tagline: <input type="text" name="age" value="{{user.tagline}}"> <br>
-		Boss in: <input type="text" name="age" value="{{user.tags}}"> <br>
-		Interests: <input type="text" name="age" value="{{user.interests}}"> <br>
+		Tagline: <input type="text" name="tagline" value="{{user.tagline}}"> <br>
+		Boss in: <input type="text" name="tags" value="{{user.tags}}"> <br>
+		Interests: <input type="text" name="interests" value="{{user.interests}}"> <br>
 		<input type="submit" value="Update My Profile!" >
 	</form>
 </div>
