--- a/match.html
+++ b/match.html
@@ -5,9 +5,7 @@
 		<ul class="slides">
 			{% for user in users %}
 			<li class="slide">
-				<div class="img-wrapper">
-					<img src="{{user.picture}}" />
-				</div>
+				<img src="{{user.picture}}" />
 				<div class="info">
 				<h2> {{user.first}} </h2>
 				Age: {{user.age}} <br>
@@ -44,17 +42,17 @@
 	}
 	.info {
 		height: 100%;
+		position: relative;
+		left: 10%;
 		padding: 5%;
-	}
-	.img-wrapper {
-		width: 30%;
-		float: left;
+		text-align: left;
 	}
 	img {
 		border: 2px solid;
     	border-radius: 25px;
     	max-width: 100%;
     	max-height: 100%;
+    	float: left;
 	}
 </style>
 <script>
