--- a/profile.html
+++ b/profile.html
@@ -20,6 +20,7 @@
     </div>
 		<h2> {{user.first}} </h2>
 		Age: <input type="text" name="age" value="{{user.age}}"> <br>
+		Mission: <input type="text" name="age" value="{{user.mission}}"> <br>
 		Tagline: <input type="text" name="tagline" value="{{user.tagline}}"> <br>
 		Boss in: <input type="text" name="tags" value="{{user.tags}}"> <br>
 		Interests: <input type="text" name="interests" value="{{user.interests}}"> <br>
@@ -27,6 +28,11 @@
 	</form>
 </div>
 <style>
-
+	img {
+		border: 2px solid;
+    	border-radius: 25px;
+    	max-width: 100%;
+    	max-height: 100%;
+	}
 </style>
 {% endblock %}
