making signout button

--- a/home.html
+++ b/home.html
@@ -19,7 +19,7 @@
     data-scope="https://www.googleapis.com/auth/plus.login">
   </span>
 </span> 
-
+{{greeting}}
     <script type="text/javascript">
 function signinCallback(authResult) {
 	console.log(authResult)
