--- a/match.html
+++ b/match.html
@@ -11,7 +11,7 @@
 				<h2> {{user.first}} </h2>
 				Age: {{user.age}} <br>
 				Mission: {{user.mission}} <br>
-				Tags: 
+				Skills: 
 					{% for t in user.tags %}
 						<a href=""> {{t}} </a>
 					{% endfor %} <br>
