--- a/base.html
+++ b/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Spark2</title>
+    <title>Spark</title>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
@@ -26,6 +26,7 @@
 </head>
 <header>
     <h1>Spark</h1>
+    <img src="images/spark-logo.png" alt="spark logo" />
 </header>
 <nav>
     <ul>
