update base and images

--- a/base.html
+++ b/base.html
@@ -20,13 +20,19 @@
             text-align: center;
         }
         body {
-            background-color: rgba(168,168,168, 0.2);
+            background-color: rgba(0,0,0, 0);
         }
+
+        div.logo img {
+            margin: 10px;
+            border: none;
+        }
+
     </style>
 </head>
 <header>
-    <h1>Spark</h1>
-    <img src="images/spark-logo.png" alt="spark logo" />
+    <!-- <h1>Spark</h1> -->
+    <div class="logo"><img src="static/images/spark-logo.png" alt="spark logo" height="50" width="100"/> </div>
 </header>
 <nav>
     <ul>
