--- a/home.html
+++ b/home.html
@@ -8,7 +8,10 @@
      })();
     </script>
 
-
+<img src="images/matchbub-red.png" alt="spark logo" />
+<img src="images/mentorbub-red.png" alt="spark logo" />
+<img src="images/codebub-red.png" alt="spark logo" />
+<img src="images/spark-logo.png" alt="spark logo" />
     <span id="signinButton">
   <span
     class="g-signin"
