--- a/base.html
+++ b/base.html
@@ -23,7 +23,7 @@
             background-color: rgba(0,0,0, 0);
         }
 
-        div.logo img {
+        a.navbar-brand img {
             margin: 10px;
             border: none;
         }
@@ -31,16 +31,30 @@
     </style>
 </head>
 <header>
-    <!-- <h1>Spark</h1> -->
-    <div class="logo"><img src="static/images/spark-logo.png" alt="spark logo" height="50" width="100"/> </div>
+    <!-- <h1>Spark</h1> 
+    <div class="logo"><img src="static/images/spark-logo.png" alt="spark logo" height="50" width="100"/> </div> -->
 </header>
-<nav>
+<!--<nav>
     <ul>
         <li><a href="/">Home</a></li>
         <li><a href="/match">Find Mentors</a></li>
         <li><a href="/profile">My Profile</a></li>
     </ul>
+</nav>-->
+
+<nav class="navbar navbar-default" role="navigation">
+   <div class="navbar-header">
+      <a class="navbar-brand" href="/"> <img src="static/images/spark-logo.png" alt="spark logo" height="50" width="100"/></a>
+   </div>
+   <div>
+      <ul class="nav navbar-nav">
+         <li><a href="/">Home</a></li>
+         <li><a href="/match">Find Mentors</a></li>
+         <li><a href="/profile">My Profile</a></li>
+      </ul>
+   </div>
 </nav>
+
 <body>
     {% block body %}
     {% endblock %}
