--- a/home.html
+++ b/home.html
@@ -1,5 +1,40 @@
-{% extends "base.html" %}
-     {% block body %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <title>Spark</title>
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+
+    <style>
+      img {
+        width: 20%;
+      }
+      .wrapper {
+        text-align: center;
+      }
+      #logo {
+        width: 50%;
+      }
+    </style>
+</head>
+</body>
+  <div class="wrapper">
+    <img id="logo" src="static/images/spark-logo.png" alt="spark logo" /> <br>
+    <img src="static/images/matchbub-red.png" alt="spark logo" />
+    <img src="static/images/mentorbub-red.png" alt="spark logo" />
+    <img src="static/images/codebub-red.png" alt="spark logo" /> <br>
+    <span id="signinButton">
+      <span
+        class="g-signin"
+        data-callback="signinCallback"
+        data-clientid="692021064973-s1m38r36dunrhusuhcvnmfbj5uj3eavf.apps.googleusercontent.com"
+        data-cookiepolicy="single_host_origin"
+        data-requestvisibleactions="http://schemas.google.com/AddActivity"
+        data-scope="https://www.googleapis.com/auth/plus.login">
+      </span>
+    </span> 
     <script type="text/javascript">
       (function() {
        var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
@@ -7,21 +42,8 @@
        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
      })();
     </script>
+  </div>
 
-<img src="static/images/matchbub-red.png" alt="spark logo" />
-<img src="static/images/mentorbub-red.png" alt="spark logo" />
-<img src="static/images/codebub-red.png" alt="spark logo" />
-<img src="static/images/spark-logo.png" alt="spark logo" />
-    <span id="signinButton">
-  <span
-    class="g-signin"
-    data-callback="signinCallback"
-    data-clientid="692021064973-s1m38r36dunrhusuhcvnmfbj5uj3eavf.apps.googleusercontent.com"
-    data-cookiepolicy="single_host_origin"
-    data-requestvisibleactions="http://schemas.google.com/AddActivity"
-    data-scope="https://www.googleapis.com/auth/plus.login">
-  </span>
-</span> 
 {{greeting}}
     <script type="text/javascript">
 function signinCallback(authResult) {
@@ -79,5 +101,5 @@ function disconnectUser(access_token) {
 // Could trigger the disconnect on a button click
 $('#revokeButton').click(disconnectUser);
 </script>
-
-{% endblock %}
+</body>
+</html>
