--- a/home.html
+++ b/home.html
@@ -64,6 +64,7 @@ function signinCallback(authResult) {
     // Update the app to reflect a signed in user
     // Hide the sign-in button now that the user is authorized, for example:
     document.getElementById('signinButton').setAttribute('style', 'display: none');
+    window.redirect("/match")
   } else {
     // Update the app to reflect a signed out user
     // Possible error values:
