--- a/home.html
+++ b/home.html
@@ -35,6 +35,9 @@
         data-scope="https://www.googleapis.com/auth/plus.login">
       </span>
     </span> 
+    <form action="/login">
+      <input type="submit" value="login">
+    </form>
     <script type="text/javascript">
       (function() {
        var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
@@ -64,7 +67,7 @@ function signinCallback(authResult) {
     // Update the app to reflect a signed in user
     // Hide the sign-in button now that the user is authorized, for example:
     document.getElementById('signinButton').setAttribute('style', 'display: none');
-    window.redirect("/match")
+    window.location = "http://www.code-spark.appspot.com/profile"
   } else {
     // Update the app to reflect a signed out user
     // Possible error values:
