--- a/profile.html
+++ b/profile.html
@@ -19,9 +19,10 @@
 		  <img class="img-cont" src="{{user.picture}}" />
     </div>
 		<h2> {{user.first}} </h2>
+		Email: <input type="text" name="age" value="{{user.email}}"> <br>
 		Age: <input type="text" name="age" value="{{user.age}}"> <br>
 		Mission: <input type="text" placeholder="three words" name="mission" value="{{user.tagline}}"> <br>
-		Boss in: <input type="text" name="tags" value="{{user.tags}}"> <br>
+		Skills: <input type="text" name="tags" value="{{user.tags}}"> <br>
 		Interests: <input type="text" name="interests" value="{{user.interests}}"> <br>
 		<input type="submit" value="Update My Profile!" >
 	</form>
