more user db changes

--- a/home.html
+++ b/home.html
@@ -39,7 +39,7 @@
     <img src="static/images/matchbub-red.png" alt="spark logo" />
     <img src="static/images/mentorbub-red.png" alt="spark logo" />
     <img src="static/images/codebub-red.png" alt="spark logo" /> <br>
-
+{{greeting}}
   </div>
   <div class="wrapper">
     <span id="signinButton">
