--- a/base.html
+++ b/base.html
@@ -26,7 +26,14 @@
         a.navbar-brand img {
             margin: 10px;
             border: none;
+            max-height: 100%;
+
         }
+
+        img {
+        
+        max-height: 100%;
+    }
 
     </style>
 </head>
