chnages to homepage

--- a/profile.html
+++ b/profile.html
@@ -14,7 +14,7 @@
       max-height:100%;
     }
     </style>
-
+    {{greeting}}
     <div class="img-box">
 		  <img class="img-cont" src="{{user.picture}}" />
     </div>
