--- a/profile.html
+++ b/profile.html
@@ -19,7 +19,7 @@
 		  <img class="img-cont" src="{{user.picture}}" />
     </div>
 		<h2> {{user.first}} </h2>
-		Email: <input type="text" name="age" value="{{user.email()}}"> <br>
+		Email: <input type="text" name="email" value="{{user.email}}"> <br>
 		Age: <input type="text" name="age" value="{{user.age}}"> <br>
 		Mission: <input type="text" placeholder="three words" name="mission" value="{{user.tagline}}"> <br>
 		Skills: <input type="text" name="tags" value="{{user.tags}}"> <br>
