--- a/home.html
+++ b/home.html
@@ -29,6 +29,18 @@
       }
     </style>
 </head>
+<nav class="navbar navbar-default" role="navigation">
+   <div class="navbar-header">
+      <a class="navbar-brand" href="/"> <img src="static/images/spark-logo.png" alt="spark logo" height="50" width="100"/></a>
+   </div>
+   <div>
+      <ul class="nav navbar-nav">
+         <li><a href="/">Home</a></li>
+         <li><a href="/match">Find Mentors</a></li>
+         <li><a href="/profile">My Profile</a></li>
+      </ul>
+   </div>
+</nav>
 </body>
   <div class="wrapper">
     <img id="logo" src="static/images/spark-logo.png" alt="spark logo" /> <br>
@@ -39,7 +51,7 @@
     <img src="static/images/matchbub-red.png" alt="spark logo" />
     <img src="static/images/mentorbub-red.png" alt="spark logo" />
     <img src="static/images/codebub-red.png" alt="spark logo" /> <br>
-{{greeting}}
+<h1>{{greeting}}<h1>
   </div>
   <div class="wrapper">
     <span id="signinButton">
