--- a/profile.html
+++ b/profile.html
@@ -14,25 +14,38 @@
       max-height:100%;
     }
     </style>
+
+    <div class="form_hover">
     {{greeting}}
     <div class="img-box">
-		  <img class="img-cont" src="{{user.picture}}" />
+		  <img class="img-circle" src="{{user.picture}}" />
     </div>
 		<h2> {{user.first}} </h2>
-		Email: <input type="text" name="email" value="{{user.email}}"> <br>
-		Age: <input type="text" name="age" value="{{user.age}}"> <br>
-		Mission: <input type="text" placeholder="three words" name="mission" value="{{user.tagline}}"> <br>
-		Skills: <input type="text" name="tags" value="{{user.tags}}"> <br>
-		Interests: <input type="text" name="interests" value="{{user.interests}}"> <br>
+		Email: &nbsp&nbsp&nbsp&nbsp<input type="text" name="email" value="{{user.email}}"> <br>
+		Age:&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<input type="text" name="age" value="{{user.age}}"> <br>
+		Mission:&nbsp <input type="text" placeholder="three words" name="mission" value="{{user.tagline}}"> <br>
+		Skills:&nbsp&nbsp&nbsp&nbsp&nbsp <input type="text" name="tags" value="{{user.tags}}"> <br>
+		Interests: <input type="text" name="interests" value="{{user.interests}}"> <br /><br />
 		<input type="submit" class="btn btn-success" value="Update My Profile!" >
 	</form>
+  </div>
 </div>
 <style>
 	img {
-		border: 2px solid;
+		border: 0px solid;
     	border-radius: 25px;
-    	max-width: 100%;
-    	max-height: 100%;
+      width: 200px;
+      height: 200px;
 	}
+
+  .form_hover .caption-text {
+            z-index: 10;
+            color: #fff;
+            position: absolute;
+            height: 240px;
+            text-align: center;
+            top: -20px;
+            width: 100%;
+        }
 </style>
 {% endblock %}
